<resources>
    <string name="app_name">dataBase</string>
    <string name="add">Добавить</string>
    <string name="rus">Русское слово</string>
    <string name="eng">Английское слово</string>
    <string name="showList">Показать список</string>
    <string name="var1">Вариант 1</string>
    <string name="var2">Вариант 2</string>
    <string name="var3">Вариант 3</string>
    <string name="var4">Вариант 4</string>
    <string name="btnService">Сервис</string>
    <string name="delAll">Удалить все</string>
    <string name="testContent">Заполнить тестовыми данными</string>
    <string name="loadFromFile">Загрузить из файла</string>
</resources>
