<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/rus"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/back"
        android:hint="@string/rus"
        android:padding="5pt"
        app:layout_constraintBottom_toTopOf="@+id/eng"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        tools:layout_editor_absoluteX="61dp" />

    <EditText
        android:hint="@string/eng"
        android:id="@+id/eng"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/back"
        android:padding="5pt"
        app:layout_constraintBottom_toTopOf="@+id/add"
        tools:layout_editor_absoluteX="48dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="168dp"
        android:layout_height="97dp"
        android:layout_marginBottom="316dp"
        android:onClick="addonClick"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showList"
        android:layout_width="202dp"
        android:layout_height="84dp"
        android:onClick="onShowList"
        android:text="@string/showList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:onClick="onClickService"
        android:id="@+id/btnService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnService"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>